Added portfolio and services page

--- a/FirstWeb/index.html
+++ b/FirstWeb/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <a href="#" class="logo">Portfolio</a>
-      <i class='bx bx-menu' id="menu-icon"></i>
+      <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -28,23 +28,143 @@
 
     <!-- Home section design -->
     <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello, It's me</h3>
-            <h1>Devaashish Kumar</h1>
-            <h3>And I'm a <span>Developer</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates veniam pariatur itaque neque dolores totam magni aliquam!</p>
-            <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="#"><i class='bx bxl-discord' ></i></a>
-            </div>
-            <a href="#" class="btn">Download CV</a>
+      <div class="home-content">
+        <h3>Hello, It's me</h3>
+        <h1>Devaashish Kumar</h1>
+        <h3>And I'm a <span>Developer</span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          veniam pariatur itaque neque dolores totam magni aliquam!
+        </p>
+        <div class="social-media">
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="#"><i class="bx bxl-discord"></i></a>
+        </div>
+        <a href="#" class="btn">Download CV</a>
+      </div>
+
+      <div class="home-img">
+        <img src="images/home.png" alt="home image" />
+      </div>
+    </section>
+
+    <!-- About section design -->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="images/about.png" alt="Abiut image" />
+      </div>
+      <div class="about-container">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis
+          totam assumenda, fuga esse voluptatibus voluptatum error porro labore
+          suscipit mollitia.
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </section>
+
+    <!-- Services section design  -->
+    <section class="services" id="services">
+      <h2 class="heading">Our <span>Services</span></h2>
+      <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-bar-chart-alt"></i>
+          <h3>Web Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+            possimus ab dolorum nesciunt, cumque voluptate magnam corporis
+            assumenda omnis suscipit.
+          </p>
+          <a href="#" class="btn">Read More</a>
         </div>
 
-        <div class="home-img">
-            <img src="images/home.png" alt="home image">
+        <div class="services-box">
+          <i class="bx bxs-paint"></i>
+          <h3>Graphic Design</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+            possimus ab dolorum nesciunt, cumque voluptate magnam corporis
+            assumenda omnis suscipit.
+          </p>
+          <a href="#" class="btn">Read More</a>
         </div>
+
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Digital Marketing</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+            possimus ab dolorum nesciunt, cumque voluptate magnam corporis
+            assumenda omnis suscipit.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio section design  -->
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span>Project</span></h2>
+
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="images/portfolio1.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, totam.</p>
+            <a href="#"><i class='bx bx-link-external' ></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio2.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, totam.</p>
+            <a href="#"><i class='bx bx-link-external' ></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio3.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, totam.</p>
+            <a href="#"><i class='bx bx-link-external' ></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio4.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, totam.</p>
+            <a href="#"><i class='bx bx-link-external' ></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/portfolio5.jpg" alt="">
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, totam.</p>
+            <a href="#"><i class='bx bx-link-external' ></i></a>
+          </div>
+
+          <div class="portfolio-box">
+            <img src="images/portfolio6.jpg" alt="">
+            <div class="portfolio-layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, totam.</p>
+              <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
